--- a/Src/DotAmf/Errors.resx
+++ b/Src/DotAmf/Errors.resx
@@ -132,4 +132,10 @@
 	<data name="AmfContractResolver_TypeRegistrationError">
 		<value xml:space="preserve">Unable to register type.</value>
 	</data>
+	<data name="Amf3Deserializer_ReadString_NegativeLength">
+		<value xml:space="preserve">Length cannot be negative.</value>
+	</data>
+	<data name="Amf3Deserializer_ReadObject_InstantiationError">
+		<value xml:space="preserve">Error instantiating a data contract object.</value>
+	</data>
 </root>
