--- a/Src/DotAmf/Errors.resx
+++ b/Src/DotAmf/Errors.resx
@@ -136,6 +136,66 @@
     <value>Error instantiating a data contract object.</value>
   </data>
   <data name="DataContractUtil_GetContractAlias_InvalidContract" xml:space="preserve">
-    <value>Type is not a valid AMF data contract.</value>
+    <value>Type '{0}' is not a valid AMF data contract.</value>
   </data>
+  <data name="AmfDataContractResolver_ProxyInvalidTypeName" xml:space="preserve">
+    <value>Invalid type name.</value>
+  </data>
+  <data name="AmfDataContractResolver_ProxyTypeAlreadyExists" xml:space="preserve">
+    <value>Proxy type with the given type name already exists.</value>
+  </data>
+  <data name="AmfDataContractResolver_TryResolveTypeContracNotRegistered" xml:space="preserve">
+    <value>Contract is not registered.</value>
+  </data>
+  <data name="DataContractAmfSerializer_ReadObject_ContractsError" xml:space="preserve">
+    <value>Unable to deserialize data contracts.</value>
+  </data>
+  <data name="DataContractAmfSerializer_ReadObject_ErrorReadingAmf" xml:space="preserve">
+    <value>Error reading AMF data.</value>
+  </data>
+  <data name="DataContractAmfSerializer_ReadObject_InvalidStream" xml:space="preserve">
+    <value>Stream does not allow reading or seeking.</value>
+  </data>
+  <data name="DataContractAmfSerializer_WriteObject_InvalidStream" xml:space="preserve">
+    <value>Stream does not allow writing.</value>
+  </data>
+  <data name="AmfSerializationContext_AmfSerializationContext_IllegalContextSwitch" xml:space="preserve">
+    <value>Context switch makes sence only in AMF3.</value>
+  </data>
+  <data name="AmfPacketReader_AmfPacketReader_ContextSwitchRequired" xml:space="preserve">
+    <value>Context switch is required for reading data from AMF packets.</value>
+  </data>
+  <data name="Amf0Deserializer_ReadValue_UnsupportedType" xml:space="preserve">
+    <value>Type '{0}' is not supported.</value>
+  </data>
+  <data name="Amf0Deserializer_ReadPacketHeaders_InvalidFormat" xml:space="preserve">
+    <value>AMF header has invalid format.</value>
+  </data>
+  <data name="Amf0Deserializer_ReadPacketMessages_InvalidFormat" xml:space="preserve">
+    <value>AMF message has invalid format.</value>
+  </data>
+  <data name="AmfPacketReader_DecodingError" xml:space="preserve">
+    <value>Error during AMF packet decoding. Check inner exception for details.</value>
+  </data>
+  <data name="AmfPacketReader_ReadPacketVersion_VersionReadError" xml:space="preserve">
+    <value>Unable to read AMF version. Data has unknown format.</value>
+  </data>
+  <data name="AmfPacketReader_Read_StreamClosed" xml:space="preserve">
+    <value>Unable to read from the stream.</value>
+  </data>
+  <data name="AmfPacketWriter_Write_StreamNotWriteable" xml:space="preserve">
+    <value>Unable to write to the stream.</value>
+  </data>
+  <data name="AmfPacketWriter_Write_PacketEmpty" xml:space="preserve">
+    <value>Packet contains no messages.</value>
+  </data>
+	<data name="AmfPacketEncoder_EncodingError">
+		<value xml:space="preserve">Error during serialization. Check inner exception for details.</value>
+	</data>
+	<data name="DataContractAmfSerializer_WriteObject_ErrorWritingAmf">
+		<value xml:space="preserve">Error writing AMF data.</value>
+	</data>
+	<data name="DataContractAmfSerializer_WriteObject_ContractsError">
+		<value xml:space="preserve">Unable to serialize data contracts.</value>
+	</data>
 </root>
